# else-linux

./: For_Linux_1_google-disk_url.txt  README.md
ArchISO/: archiso-command.txt
Cmake/: CMakeLists.txt  cmake-python-temp.docx  index.html
Else_Info/: AppImageKit.7z  Grub2-for-Windows.7z  Python-FlashCard.bat  Python-portable.bat  alpine-linux-readme.txt  alpine-list-packages.txt  bash_fb2-to-txt.txt  cp.bat  cpython.txt  dmg.txt  dns_dns-cache_nsswitch.txt  flatpack_json_readme.txt  gnulinux.guru.7z  index.html  js_date_server.txt  log4shell_security.txt  ls.bat  mozila-config.txt  nginx_error_pages.txt  omv-5-setup.txt  qt-creator-download.txt  rm.bat  save-from-net-readme.txt  shadowsocks-redsocks.txt  smartphone-iphone.txt  w32time-windows.txt  xargs.txt
Grub-2-via-VHD.Setup-and-Load-Win-7/: G2vVhd.Setup_and_Load_Win-7.doc  G2vVhd.Setup_and_Load_Win-7.docx  G2vVhd.Setup_and_Load_Win-7.htm  grub  grub2-vhd-readme.txt  menuentry.txt  qemu.sh  windows-grub.txt
Linux_Problem/: Arduino_Connect_Problem_ReadMed.txt  Linux-MInt_SWAP_ansi.txt  Linux-MInt_SWAP_utf8.txt  Linux-Mint_Damage-Desktop_ansi.txt  Linux-Mint_Damage-Desktop_utf8.txt  Linux-Mint_Time-Update_Problem_ansi.txt  Linux-Mint_Time-Update_Problem_utf8.txt  Linux-Mint_keyboard-freeze-on-exit-at-stundby_ansi.txt  Linux-Mint_keyboard-freeze-on-exit-at-stundby_utf8.txt  System-BEEP-Off.txt  index.html  sound-fictive-output-repair.txt
MarkDown_Example/: Example.md  README.md
QT_Creator_ReedMe/: QT_Static_Build.docx  index.html  qt-creator_include.txt  qt-creator_project.pro.txt  qt-creator_resource.txt  (+1 more)
(+83 files in other folders)
